--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <h1>Register</h1>
 
-  <%= form_for @user do |f| %>
-  <%= f.text_field :email, placeholder: "E-Mail", class:"form-control" %><br>
+  <%= form_for(@user) do |f| %>
+  <%= f.text_field :email, placeholder: "Email", class:"form-control" %><br>
   <%= f.password_field :password, placeholder: "Password", class:"form-control" %><br>
   <%= f.password_field :password_confirmation, placeholder: "Password Confirmation", class:"form-control" %><br>
   <%= f.submit "Create Account", class:"btn btn-primary"%>
