--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -2,12 +2,16 @@
   <h1>Submit a New Link</h1>
 
   <%= form_for(@link) do |f| %>
-  <%= f.text_field :title, placeholder: "Title", class:"form-control" %><br>
-  <%= f.password_field :url, placeholder: "URL", class:"form-control" %><br>
-  <%= f.submit "Create Account", class:"btn btn-primary"%>
-
+    <%= f.text_field :title, placeholder: "Title", class:"form-control" %><br>
+    <%= f.text_field :url, placeholder: "URL", class:"form-control" %><br>
+    <%= f.submit "Save Link", class:"btn btn-primary"%>
   <% end %>
 
   <h1>My Links</h1>
 
+  <% @links.each do |link| %>
+    <%= link.title %>
+    <%= link.url %>
+    <%= link.read %>
+  <% end %>
 </div>
