--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -10,8 +10,10 @@
   <h1>My Links</h1>
 
   <% @links.each do |link| %>
+    <section id="link.id">
       <p>
-        <%= link.title %> <%= link.url %> <%= link.read %>
+        <%= link.title %> <%= link.url %> <%= link.read %> <%= link_to "Mark as Read" %>
       </p>
+    </section>
   <% end %>
 </div>
