turns out I don't know ajax

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -14,7 +14,7 @@
       <div id="div"<%= "#{link.id}" %> >
         <p>
           <%= link.title %> <%= link.url %> <%= link.read %>
-           <a href="#" class"mark-read" id=<%= "#{link.id}" %> >Mark as Read</a>
+           <div class"fake-link" id=<%= "#{link.id}" %> style="background-color: pink;">Mark as Read</div>
         </p>
       </div>
     <% end %>
