--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -8,15 +8,7 @@
   <% end %>
 
   <h1>My Links</h1>
-  <div id="link-list">
+  <table id="link-table">
 
-    <% @links.each do |link| %>
-      <div id="div"<%= "#{link.id}" %> >
-        <p>
-          <%= link.title %> <%= link.url %> <%= link.read %>
-           <div class"fake-link" id=<%= "#{link.id}" %> style="background-color: pink;">Mark as Read</div>
-        </p>
-      </div>
-    <% end %>
-  </div>
+  </table>
 </div>
