gets values from faux form

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -6,6 +6,14 @@
     <%= f.text_field :url, placeholder: "URL", class:"form-control" %><br>
     <%= f.submit "Save Link", class:"btn btn-primary"%>
   <% end %>
+<div id="baby-fake-button">
+  <p>Looks Like a button</p>
+</div>
+
+  <div class="fake-form">
+    <input type="text" id="fake-form-title" value="" placeholder="title">
+    <input type="text" id="fake-form-url" value=""placeholder="url">
+  </div>
 
   <h1>My Links</h1>
     <div id="links-div">
