separate files for readability

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -24,6 +24,10 @@
     <%= text_field :link, :title, class: "title-search" %>
   </div>
 
+  <div id="alpha-fake-button">
+    <p>Sort Links Alphabetically</p>
+  </div>
+
   <div id="links-div">
     <table id="links-table">
 
