--- a/app/assets/stylesheets/links.scss
+++ b/app/assets/stylesheets/links.scss
@@ -12,3 +12,9 @@
   width: 100px;
   background-color: aqua;
 }
+
+#alpha-fake-button {
+  height: 30px;
+  width: 200px;
+  background-color: #675e5a;
+}
