--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,19 +1,15 @@
 <div class="container">
+  <p id="user_id"><%= @user_id %></p>
+
   <h1>Submit a New Link</h1>
 
   <%= form_for(@link) do |f| %>
     <%= f.text_field :title, placeholder: "Title", class:"form-control", id:"form-title" %><br>
     <%= f.text_field :url, placeholder: "URL", class:"form-control", id:"form-url"%><br>
-    <%= f.submit "Save Link", class:"btn", id:"baby-fake-button"%>
   <% end %>
-  <!-- <div id="baby-fake-button">
+  <div id="baby-fake-button">
     <p>Looks Like a button</p>
-  </div> -->
-<!--
-  <div class="fake-form">
-    <input type="text" id="fake-form-title" value="" placeholder="title">
-    <input type="text" id="fake-form-url" value=""placeholder="url">
-  </div> -->
+  </div>
 
   <h1>My Links</h1>
 
