--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,28 +1,30 @@
 <div class="container">
   <p id="user_id"><%= @user_id %></p>
 
+<div class="form-div">
   <h1>Submit a New Link</h1>
 
   <%= form_for(@link) do |f| %>
-    <%= f.text_field :title, placeholder: "Title", class:"form-control", id:"form-title" %><br>
-    <%= f.text_field :url, placeholder: "URL", class:"form-control", id:"form-url"%><br>
+  <%= f.text_field :title, placeholder: "Title", class:"form-control", id:"form-title" %><br>
+  <%= f.text_field :url, placeholder: "URL", class:"form-control", id:"form-url"%><br>
   <% end %>
-  <div id="baby-fake-button">
-    <p>Looks Like a button</p>
-  </div>
-
+  <input class="btn btn-default" id="baby-fake-button" type="button" value="Save">
+  <p class="no-good"></p>
+</div>
+<div class="link-list-div">
   <h1>My Links</h1>
 
   <div class="filter">
     <label>Filter By Read Status</label>
     <%= select :link, :read, @statuses, selected: "All" %>
-    <label>Search By Title</label>
-    <%= text_field :link, :title, class: "title-search" %>
+    <br>
+    <label>Search By Title:</label>
+    <%= text_field :link, :title, class: "title-search form-control shrink" %>
   </div>
 
-  <div id="alpha-fake-button">
-    <p>Sort Links Alphabetically</p>
-  </div>
+  <input class="btn btn-default" id="alpha-fake-button" type="button" value="Sort Links Alphabetically">
+
+</div>
 
   <br>
 
