--- a/app/assets/stylesheets/links.scss
+++ b/app/assets/stylesheets/links.scss
@@ -55,3 +55,17 @@ input#link_title {
 .no-good {
   display: none;
 }
+
+.options {
+  margin-top: 200px;
+  text-align: center;
+}
+
+.padded {
+  margin-top: 200px;
+  text-align: center;
+}
+
+.top-right {
+  float: right;
+}
