--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,10 @@
-<%= link_to "Log In", login_path %>
-<%= link_to "Sign Up", sign_up_path %>
+<div class="container">
+
+  <div class="options">
+    <h1>Oh HI THERE!</h1>
+    
+    <%= link_to "Log In", login_path %>
+    <%= link_to "Sign Up", sign_up_path %>
+  </div>
+
+</div>
