--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,14 @@
-<h1>User Dashboard</h1>
+<div class="container">
+  <div class="top-right">
+    <%= link_to "Logout", logout_path, method: :delete %>
+  </div>
 
-<%= @user.email %>
+  <div class="padded">
+    <h1>User Dashboard</h1>
 
-<%= link_to "Logout", logout_path, method: :delete %>
+    <h4>Hi you, you're signed in as: <%= @user.email %></h4>
 
-<%= link_to "My Links", links_path %>
+    <h3> <%= link_to "My Links", links_path %> </h3>
+
+  </div>
+</div>
