--- a/app/assets/stylesheets/links.scss
+++ b/app/assets/stylesheets/links.scss
@@ -69,3 +69,14 @@ input#link_title {
 .top-right {
   float: right;
 }
+
+#difs-div {
+  background: none repeat scroll 0 0;
+  border: 3px solid black;
+  margin: 5px;
+  padding: 5px;
+  position: relative;
+  width: 700px;
+  height: 100px;
+  overflow: auto;
+}
