--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -38,4 +38,44 @@
 
     </table>
   </div>
+
+  <div id="difs-div">
+    <table id="difs-table">
+      <tr>
+        <td>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
+        <td>bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</td>
+        <td>1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55</td>
+      </tr>
+      <tr>
+        <td>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
+        <td>bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</td>
+        <td>1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55</td>
+      </tr>
+      <tr>
+        <td>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
+        <td>bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</td>
+        <td>1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55</td>
+      </tr>
+      <tr>
+        <td>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
+        <td>bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</td>
+        <td>1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55</td>
+      </tr>
+      <tr>
+        <td>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
+        <td>bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</td>
+        <td>1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55</td>
+      </tr>
+      <tr>
+        <td>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
+        <td>bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</td>
+        <td>1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55</td>
+      </tr>
+      <tr>
+        <td>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
+        <td>bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</td>
+        <td>1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55</td>
+      </tr>
+    </table>
+  </div>
 </div>
