smidgen of style

--- a/app/assets/stylesheets/links.scss
+++ b/app/assets/stylesheets/links.scss
@@ -73,8 +73,9 @@ input#link_title {
 #difs-div {
   background: none repeat scroll 0 0;
   border: 3px solid black;
-  margin: 5px;
-  padding: 5px;
+  margin: auto;
+  margin-top: 30px;
+  padding: 20px;
   position: relative;
   width: 700px;
   height: 100px;
